Valhalla-Terraform/modules/security/main.tf
resource "aws_security_group" "web_sg" {
  name        = "allow_ssh_http"
  description = "Allow SSH & HTTP inbound traffic"
  vpc_id      = "${var.vpc_id}"

# SSH
  ingress {
    description = "SSH from WWW"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

# HTTP
  ingress {
    description = "HTTP from WWW"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-SSH-HTTP"
  }
}
